[gd_scene load_steps=6 format=3 uid="uid://cni25hsbinkfw"]

[ext_resource type="Script" path="res://scripts/ui/game_gui.gd" id="1_72ffu"]
[ext_resource type="PackedScene" uid="uid://njqkv5i1atvi" path="res://scenes/ui/ui_icon_button.tscn" id="2_jx3wm"]
[ext_resource type="Texture2D" uid="uid://cfccdei10ptjn" path="res://assets/images/ui/pause.png" id="3_klxi7"]
[ext_resource type="Texture2D" uid="uid://2na74y5ctym2" path="res://assets/images/ui/retry.png" id="3_xf12s"]
[ext_resource type="PackedScene" uid="uid://ciguail0coyfn" path="res://scenes/ui/ui_fullscreen_button.tscn" id="4_rid88"]

[node name="GameGUI" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 272.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72ffu")

[node name="LevelSelectPauseButton" parent="." instance=ExtResource("2_jx3wm")]
layout_mode = 0
offset_left = 20.0
offset_top = 1.0
offset_right = 37.0
offset_bottom = 20.0
icon = ExtResource("3_klxi7")

[node name="PauseButton" parent="." instance=ExtResource("2_jx3wm")]
layout_mode = 0
offset_left = -52.0
offset_top = 1.0
offset_right = -35.0
offset_bottom = 20.0
icon = ExtResource("3_klxi7")

[node name="RetryButton" parent="." instance=ExtResource("2_jx3wm")]
z_index = 3
layout_mode = 0
offset_left = -72.0
offset_top = 1.0
offset_right = -55.0
offset_bottom = 20.0
icon = ExtResource("3_xf12s")

[node name="FullscreenButton" parent="." instance=ExtResource("4_rid88")]
layout_mode = 0
offset_left = -48.0
offset_top = 144.0
offset_right = -31.0
offset_bottom = 163.0

[connection signal="pressed" from="LevelSelectPauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
